# daily-report

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
daily_feed/: __init__.py  cache.py  cli.py  config.py  dedup.py  entry_manager.py  extractor.py  fetcher.py  json_parser.py  langfuse_utils.py  logging_utils.py  parser.py  phoenix_utils.py  renderer.py  runner.py  types.py
daily_feed/analyzers/: __init__.py  entry_analyzer.py
daily_feed/core/: __init__.py  dedup.py  entry.py  types.py
daily_feed/fetch/: __init__.py  cache.py  extractor.py  fetcher.py
daily_feed/input/: daily_rebucket.py
daily_feed/llm/: __init__.py  prompts.py  tracing.py
daily_feed/llm/providers/: base.py  gemini.py  openai_compatible.py
daily_feed/output/: renderer.py
daily_feed/prompts/: analysis.md  deep_fetch.md
daily_feed/providers/: __init__.py  base.py  gemini.py
daily_feed/summarize/: __init__.py  tracing.py
daily_feed/summarize/providers/: base.py  gemini.py
daily_feed/templates/: report.html
daily_feed/utils/: __init__.py  logging.py
daily_report/: __init__.py  cli.py  config.py  renderer.py  runner.py
daily_report/analyzers/: synthesizer.py
daily_report/core/: entry.py  types.py
daily_report/fetch/: __init__.py  fetcher.py
daily_report/input/: __init__.py  daily_rebucket.py  json_parser.py
daily_report/llm/: prompts.py  tracing.py
daily_report/llm/providers/: __init__.py  base.py  factory.py  gemini.py
daily_report/output/: __init__.py  index_sync.py
daily_report/output/templates/: briefing.html  report.html
daily_report/prompts/: analysis.md  deep_fetch.md  extraction.md  synthesis.md
daily_report/utils/: logging.py
docs/: README.md
docs/archive/: 2026-02-10-two-pass-briefing.md
docs/plans/: 2026-02-04-json-input-format-design.md  2026-02-04-json-input-implementation.md  2026-02-05-per-entry-cache-design.md  2026-02-05-per-entry-cache-implementation.md  2026-02-06-codebase-reorganization-design.md  2026-02-06-codebase-reorganization-implementation.md
tests/: __init__.py  test_cache_switch.py  test_daily_rebucket.py  test_entry_manager.py  test_gemini_and_extraction.py  test_integration_per_entry.py  test_langfuse_tracing.py  test_llm_provider_factory.py  test_renderer.py  test_synthesis.py
tools/: rebucket_data.py
