[project]
name = "daily-feed"
version = "0.1.0"
description = "Daily feed summarizer CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Daily Feed" }]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx[socks]>=0.26.0",
  "crawl4ai>=0.3.0",
  "pyyaml>=6.0.0",
  "rapidfuzz>=3.6.0",
  "jinja2>=3.1.0",
  "python-dotenv>=1.0.0",
  "langfuse>=2.0.0",
]

[project.scripts]
daily-feed = "daily_feed.cli:app"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["daily_feed"]
include-package-data = true

[tool.setuptools.package-data]
daily_feed = ["templates/*.html"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
